tests/errors/macro/parser_unexpected_grid/kw_behind_long_comment.c
int a = 0; /*long
comment*/#define a 1

int main()
{
	assert(a, "recovery is not working");
	return 0;
}
